# trade-signal-relay

./: .env.example  .gitignore  CLAUDE.md  README.md  config.example.yaml  pyproject.toml  requirements-dev.txt  requirements.txt
.claude/agents/: code-developer.md
docs/: architecture.md  client.md  deployment.md  design-plan.md  development-plan.md  publisher.md  server.md  testing.md
infra/: deploy.sh  teardown.sh
relay_client/: __main__.py  client.py  config.py  discord_bot.py  position_manager.py  trader.py
relay_publisher/: __init__.py  publisher.py
relay_server/: auth.py  server.py
shared/: auth.py  messages.py
tests/: test_client_connectivity.py  test_client_trading.py  test_e2e.py  test_publisher.py  test_server.py  test_shared.py  test_smoke_aws.py
